Refactor usage of deprecated constructor for Float